change testes structure.

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,10 +1,4 @@
 [pytest]
-addopts = -v -n auto --html=reports/report.html --self-contained-html
-testpaths = exploratory
+testpaths = e2e
 python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
-markers =
-    smoke: mark a test as part of the smoke test suite
-    regression: mark a test as part of the regression test suite
-    exploratory: mark a test as an exploratory test
+addopts = --headed --browser chromium
