chore: update gitignore for playwright test files
- Add test-results/ directory
- Add playwright-report/ directory
- Add .last-run and .last-run.json files
- Clean up duplicate entries

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ node_modules
 dist
 dist-ssr
 *.local
+.last-run
+.last-run.json
 
 # Editor directories and files
 .vscode/*
@@ -37,3 +39,5 @@ __pycache__/
 
 # Test reports
 reports/
+test-results/
+playwright-report/
